--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.2.3",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
+    "@supabase/auth-helpers-nextjs": "^0.7.0-next.8",
+    "@supabase/supabase-js": "^2.22.0",
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
     "autoprefixer": "10.4.14",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
-    "next": "13.4.3",
+    "eslint": "^8.42.0",
+    "eslint-config-next": "^13.4.4",
+    "next": "^13.4.4",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "^5.1.3"
   }
 }
